Fix(front) : overflow-y:auto 하면 backface-visibilty가 씹히는 문제

--- a/dev-hustle-timer-web/src/components/RightSection/RightSection.css
+++ b/dev-hustle-timer-web/src/components/RightSection/RightSection.css
@@ -23,24 +23,32 @@
   height: 96vh;
   position: relative;
   /* background-color: gray; */
+
 }
 
 .rotate-button {
-  position:absolute;
-  top:0;
-  left:0;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  /* transform: rotateY(00deg); */
-  transition: transform 0.5s; /* Animation duration, change as needed */
-  backface-visibility: hidden;
+  transform: rotateY(0deg);
+  transition: transform 0.5s,visibility 0.2s;
+  /* Animation duration, change as needed */
+   backface-visibility: hidden; 
+    visibility: visible;
+
 }
 
 .rotated90 {
-  transform: rotateY(90deg); /* 3D horizontal rotation */
+  transform: rotateY(90deg);
+  /* 3D horizontal rotation */
 }
-.rotated180{
+
+.rotated180 {
   transform: rotateY(180deg);
+  visibility: hidden;
+  /* display:none; */
 }
 .rotated270{
   transform: rotateY(270deg);
